# aws

./: README.md
aws_protoparser/: CMakeLists.txt  aws_protoparser.hpp  example.cpp
aws_protoparser/proto/: ConfigProtoV2.proto
